feat(api): add api for booking, adjust format price
Include:
- Add APIs for booking Page(not complete).
- Adjust format price vi locale.
- Fix failure Vercel deploy.